--- a/resources/css/im.css
+++ b/resources/css/im.css
@@ -8,7 +8,7 @@
 /* ------------- Раздел "Личные сообщения" ------------- */
 
 /* иконка с маленьким изображением пользователя в списке диалогов */
-.nim-peer--photo-w {
+.nim-peer--photo-w, .nim-peer--photo-w img {
     border-radius: 0 !important;
 }
 
