--- a/resources/css/float_box.css
+++ b/resources/css/float_box.css
@@ -12,6 +12,24 @@
     width: 240px !important;
 }
 
+.fc_tab_close, .fc_tab_max, .fc_tab_resize, .fc_tab_pin {
+    display: block !important;
+    width: 12px !important;
+    height: 12px !important;
+    opacity: .6 !important;
+    transition: opacity .15s ease !important;
+}
+
+.fc_tab_resize_wrap {
+    display: block !important;
+    float: right !important;
+    visibility: visible !important;
+}
+
+.fc_tab_wrap .fc_tab_resize {
+    background-position: 2px -16px !important;
+}
+
 /* иконка с изображением пользователя */
 img.fc_contact_photo {
     border-radius: 0 !important;
