--- a/resources/css/im.css
+++ b/resources/css/im.css
@@ -28,6 +28,10 @@
     right: 7px !important;
 }
 
+.nim-dialog .tt_w.tt_black {
+    left: 150px !important;
+}
+
 /* непрочитанное отправленное сообщение в списке диалогов */
 .nim-dialog_unread-out .nim-dialog--cw {
     background-color: #EDF0F5 !important; /* #EDF1F5 */
