--- a/resources/css/im.css
+++ b/resources/css/im.css
@@ -37,6 +37,10 @@
     left: 74% !important;
 }
 
+.nim-dialog:not(.nim-dialog_unread-out) .nim-dialog--cw {
+    padding: 6px 0 !important;
+}
+
 /* непрочитанное отправленное сообщение в списке диалогов */
 .nim-dialog_unread-out .nim-dialog--cw {
     background-color: #EDF0F5 !important; /* #EDF1F5 */
